--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,4 @@
 $color-primary: #288570;
-$color-black: #000;
-$color-white: #fff;
-
+$color-font-primary: #000;
+$color-font-secondary: #fff;
+$shadow-size: 3px 3px 4px 
