--- a/sass/layouts/_projet.scss
+++ b/sass/layouts/_projet.scss
@@ -3,7 +3,7 @@
     margin-bottom: 60px;
     &__img {
         width: 300px;
-        border: 2px solid #000000;
+        border: 2px solid $color-font-primary;
         border-radius: 20px;
     }
     &__bloc {
