--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,17 +11,6 @@ $title2-font: Galgony, "Comic sans MS", sans-serif;
 $shadow-size: 4px 4px 5px;
 $font-size: 22px;
 
-/*$nav-text: (
-    normal: (
-        color: $color-font-secondary,
-        shadow: $color-font-primary,
-    ),
-    hover: (
-        color: $color-font-primary,
-        shadow: $color-font-secondary,
-    )
-);*/
-
 /*Background:*/
 $background-img-work: url('../img/main-background.jpg');
 $background : linear-gradient(to right, rgba(227, 227, 227, 1.0), rgba(225, 227, 227, 1.0)20%,rgba(223, 223, 221, 1.0)50%, rgba(216, 216, 214, 1.0)75%, rgb(213, 213, 211)100%);
@@ -29,3 +18,5 @@ $background : linear-gradient(to right, rgba(227, 227, 227, 1.0), rgba(225, 227,
 /*Layout:*/
 $page-min-width: 580px;
 $nav-min-width: 500px;
+$Margin0 : 0;
+$Padding0 : 0;
