--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -44,3 +44,22 @@
 	background: $background
 }
 
+@mixin projet {
+    .projet {    
+        text-align: justify;
+        margin-bottom: 50px;
+        &__img {
+            width: 300px;
+            border: 2px solid $color-font-primary;
+            border-radius: 20px;
+        }
+        &__bloc {
+            display: flex;
+        }
+    
+        &__texte p {
+            padding-left: 20px;
+            margin: 0;
+        }
+    }
+}
