--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -39,6 +39,7 @@ $padding-width-media-min: 86%;
 /*Media queries:*/
 $media-medium: 1300px;
 $media-min: 850px;
+$media-handheld: handheld;
 
 /*Nav:*/
 $nav-border-bottom: 3px solid $color-font-primary;
