css-prefixed rename on main.prefixed

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -51,11 +51,8 @@
 	overflow-x: clip;
 	margin: 0;
 	padding: 0;
-	background: $background
+	background: $background;
 }
-
-/*Nav:*/
-   
 
 /*Projet: */
 @mixin projet {
