--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,15 @@
 body {
 	@include body-layout;
+	
+}
+
+.page-background {
+	&--img {
+	@include background-img;
+	}
+	&--color {
+	@include background-color;
+	}
 }
 
 h1 {
@@ -13,9 +23,7 @@ h3 {
 	padding: 0;
 }
 
-.page-background {
-	@include background-image;
-}
+
 
 .main-page,
 .contact-page {
