Fix text-decoration and color of Icon + Profil Linkedin

--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -15,4 +15,10 @@
     &__icon {
         text-align: center;
     }
+    
+}
+
+.reseaux a {
+    text-decoration: none;
+    color: $color-font-primary;
 }
