--- a/css/main.css
+++ b/css/main.css
@@ -201,4 +201,9 @@ h3 {
   text-align: center;
 }
 
+.reseaux a {
+  text-decoration: none;
+  color: #000;
+}
+
 /*# sourceMappingURL=main.css.map */
